--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,19 @@ jobs:
         node: [14]
 
     steps:
-      - uses: actions/checkout@v2
-      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-      - run: yarn install --frozen-lockfile --check-files
-      - uses: actions/cache@v2
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: npm
+
+      - name: yarn install
+        run: yarn install --frozen-lockfile --check-files
+
+      - name: Cash workspace
+        uses: actions/cache@v2
         id: cache-build
         with:
           path: ./*
