--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-          cache: npm
+          cache: yarn
+
+      - name: yarn install
         run: yarn install --frozen-lockfile --check-files
 
       - name: Cash workspace
